bullet points no longer show up behind stars

--- a/google-places.css
+++ b/google-places.css
@@ -1,5 +1,6 @@
 .review-stars ul {
   display: inline-block;
+  list-style: none;
 }
 
 .review-stars ul li {
